# terebii

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml
s6/etc/s6-overlay/s6-rc.d/redis/: run
s6/etc/s6-overlay/s6-rc.d/scheduler/: run
s6/etc/s6-overlay/s6-rc.d/startup/: up
s6/etc/s6-overlay/s6-rc.d/worker/: run
terebii/: app.py  scheduler.py  settings.py  startup.py  test_data.json  utils.py
terebii/default_templates/: body.jinja  startup.jinja  title.jinja
