[project]
name = "terebii"
version = "0.1.0"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "apprise>=1.9.6",
    "durationpy>=0.10",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic-settings>=2.12.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.1.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "rich-tracebacks>=2.0.0",
]
