[project]
name = "terebii"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "apprise>=1.9.6",
    "durationpy>=0.10",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.1.2",
    "uvloop>=0.22.1",
]
dynamic = ["version"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "rich-tracebacks>=2.0.0",
]
